objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountActiveContractsCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SFDC-3473 Rollup summary field to calculate count of all active contracts.</description>
        <inlineHelpText>Count of all active contracts related to the account</inlineHelpText>
        <label>Account Active Contracts Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountContractsCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SFDC-3473 Rollup summary field to calculate count of all contracts.</description>
        <inlineHelpText>Count of all contracts related to the account</inlineHelpText>
        <label>Account Contracts Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-383 This field serves as a lookup to the Country object</description>
        <inlineHelpText>Read-only field, updated indirectly by a change of Company&apos;s Billing Country/Territory</inlineHelpText>
        <label>Account Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountGeography__c</fullName>
        <description>SFDC1-383 This is a calculated field based on country.</description>
        <formula>TEXT(AccountCountry__r.Geography__c)</formula>
        <inlineHelpText>Read-only field referencing Account Country&apos;s geography</inlineHelpText>
        <label>Account Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to return the 18 character system generated Unique Account ID for Customer Master Data reporting purposes.</inlineHelpText>
        <label>AccountID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountInfo__c</fullName>
        <formula>BillingStreet &amp; &quot;, &quot; &amp; BillingCity &amp; &quot;, &quot; &amp; BillingCountry &amp; &quot; (&quot; &amp; TEXT(Status__c) &amp; &quot;, &quot; &amp; TEXT(DataGovernanceStatus__c) &amp; &quot;)&quot;</formula>
        <label>Account Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOverviewURL2__c</fullName>
        <description>This field holds the link to the Salesforce Anywhere (quip) document holding the account overview hierarchy template</description>
        <inlineHelpText>This field is used by Salesforce Anywhere (quip) there is no need to view or change it</inlineHelpText>
        <label>Account Overview URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AccountOverviewURL__c</fullName>
        <description>This field holds the link to the Salesforce Anywhere (quip) document holding the account overview</description>
        <inlineHelpText>This field is used by Salesforce Anywhere (quip) there is no need to view or change it</inlineHelpText>
        <label>Account Overview URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AccountPlanURL__c</fullName>
        <label>Account Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AccountRegion__c</fullName>
        <description>SFDC1-383 This is a calculated field on the account that displays next to the address and shows the region of the account based on the company address&apos;s country. This is NOT sales region which will be on the User.
Use the country table to find the region and display on the form as read only</description>
        <formula>TEXT(AccountCountry__r.Region__c)</formula>
        <inlineHelpText>Read-only field referencing Account Country&apos;s region.</inlineHelpText>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSubType__c</fullName>
        <description>SFDC1-4380 Account Sub Type dependent picklist is only editable by the profiles that can edit the Account Type field. The field must have a value (and can only have a value) if &quot;Channel Partner&quot; is selected as Account Type.</description>
        <inlineHelpText>For Global Alliance accounts. Please select from picklist.</inlineHelpText>
        <label>Account Sub Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Integration Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountTeamMemberforOppty__c</fullName>
        <description>SFDC-5485 - Global Alliances - Upgrade (Amendments)</description>
        <label>Account Team Member for Oppty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTeamMembers__c</fullName>
        <description>SFDC-5037 This field concatenates Account Team Members in a comma separated list.</description>
        <label>Account Team Members</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountTerminated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(SFDC-5716) Integrate Actimize with Salesforce</description>
        <label>Account Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalAccountFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-785 This field is a link to a 1:1 relations ship between Account and Additional Account Fields object.  It is created when a new account is created and is read only. The user can easily click on this field to see the related object.</description>
        <inlineHelpText>Created when a new account is created and is read only.</inlineHelpText>
        <label>Additional Account Fields</label>
        <referenceTo>AdditionalAccountFields__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlternateNameTradingName__c</fullName>
        <description>SFDC1-144 Allows for alternate ways to search for the account.</description>
        <inlineHelpText>Please enter the Alternate Name/Trading Name for this account (multiple values should be separated by a comma in the same field).</inlineHelpText>
        <label>Alternate Name/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateTradingName__c</fullName>
        <description>SFM-194: Created as part of DAT of Accounts</description>
        <inlineHelpText>Please enter the alternate trading name for this account</inlineHelpText>
        <label>Alternate Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedContractSummaryCount__c</fullName>
        <description>SFDC1-5228 Account Overview Report, Displays the contract count</description>
        <inlineHelpText>Displays the contract count</inlineHelpText>
        <label>Approved Contract Summary Count</label>
        <summaryFilterItems>
            <field>ApprovedContractSummary__c.AnnualContractValue__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ApprovedContractSummary__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>SFDC-5603 - Associated To field to tag records [Maintenance field]</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuditedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3129 Audit field created for the Account cleansing team to log the person who audited the account</description>
        <inlineHelpText>User who audited the account</inlineHelpText>
        <label>Audited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditedOn__c</fullName>
        <description>SFDC-3129 date field to log the date on which the account was audited by a member of account cleansing project</description>
        <inlineHelpText>Date on which the account was processed by Account cleansing team</inlineHelpText>
        <label>Audited On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BP__c</fullName>
        <description>SFDC1-5223 - This field holds the BP number value and its value cascades to the Contract object in the same field
SFDC-2326</description>
        <inlineHelpText>SAP customer number (BP)</inlineHelpText>
        <label>Sold To: Company # SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackendDivestituresTo__c</fullName>
        <description>SFDC-2420: Created to identify the accounts while selling off subsidiary business interests or investments.</description>
        <label>Divestitures to?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Informa</fullName>
                </value>
                <value>
                    <fullName>Montagu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-10407 : Creating this field to bypass the validation rule using Apex Code.</description>
        <inlineHelpText>This field will be used to byPass the Validation Rules in Apex.</inlineHelpText>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7512 designates that the account owner was assigned through the GAM.  It is possible that this box be marked true and an Account manager is not yet assigned.</description>
        <inlineHelpText>When field is true the account will be identified as part of the CAM (Corporate Account Manager) list.</inlineHelpText>
        <label>CAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPIQAlternateCompanyName__c</fullName>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>AlternateCompanyName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPIQCompetitors__c</fullName>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>Competitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPIQDBDUNS__c</fullName>
        <description>This field has been created for CapIQ</description>
        <label>D&amp;B DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPIQHistoricalCompanyName__c</fullName>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>Historical Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPIQNotinCAPIQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not in CAPIQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPIQOperatingStatus__c</fullName>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>Operating Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPIQParentCo__c</fullName>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>ParentCo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPIQParentId__c</fullName>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>ParentId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPIQPrimaryFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-5005: This field has been created for CapIQ</description>
        <label>PrimaryFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCCES__c</fullName>
        <inlineHelpText>This roll-up field calculates the average Customer Effort Score (CES) across ALL Transactional Survey Responses for any Contact(s) who submitted a Survey Response under this Account, on a scale of 1 (Extremely difficult) - 7 (Extremely easy).</inlineHelpText>
        <label>CC – CES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCCSAT__c</fullName>
        <inlineHelpText>This roll-up field calculates the average Customer Satisfaction (CSAT) Score across ALL Transactional Survey Responses for any Contact(s) who submitted a Survey Response under this Account, on a scale of 1 (Extremely unsatisfied) - 7 (Extremely satisfied).</inlineHelpText>
        <label>CC – CSAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedWonOpportunityCount__c</fullName>
        <description>SFDC-3210 Rollup summary field to calculate any closed-won oppies related to account</description>
        <inlineHelpText>Count of closed-won opportunities related to the account</inlineHelpText>
        <label>Closed Won Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ComplianceRestrictionException__c</fullName>
        <description>SFDC1-8049 Setting this designation at the Ultimate Parent will cascade the value in the Compliance Restriction field through the hierarchy to all accounts except those designated with a different exception value</description>
        <inlineHelpText>When set at the Ultimate Parent level, this restriction will then display as the Compliance Restriction for all child accounts.  Otherwise, when a child record has a different restriction than the parent, this field allows for that difference to be set.</inlineHelpText>
        <label>Compliance Restriction Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ComplianceRestrictions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplianceRestriction__c</fullName>
        <description>SFDC1-8049 if the Compliance Restriction Exception on the account is null, then set to the Compliance Restriction Exception value of the Ultimate Parent, else set to Compliance Restriction Exception value.</description>
        <formula>IF(!ISBLANK(TEXT(ComplianceRestrictionException__c)), TEXT(ComplianceRestrictionException__c),
   IF(!ISNULL(GlobalUltimateAccount__c), TEXT(GlobalUltimateAccount__r.ComplianceRestrictionException__c), &apos;&apos;)
)</formula>
        <inlineHelpText>Calculated field. If the Compliance Restriction Exception on the account is null, then the Compliance Restriction Exception value of the Ultimate Parent, if any, will display.</inlineHelpText>
        <label>Compliance Restriction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComplianceStatus__c</fullName>
        <description>(SFDC-5716) Integrate Actimize with Salesforce</description>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Compliance Approval Required</fullName>
                </value>
                <value>
                    <fullName>Do Not Sell</fullName>
                </value>
                <value>
                    <fullName>Future Compliance Approval Required</fullName>
                </value>
                <value>
                    <fullName>GFCC Hold</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorporateNPS__c</fullName>
        <inlineHelpText>This roll-up field calculates the average Net Promoter Score (NPS) across ALL Corporate Survey Responses for any Contact(s) who submitted a Survey Response under this Account, on a scale of 0 (Not at all likely) - 10 (Extremely likely).</inlineHelpText>
        <label>Corporate – NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBUpdatedDate__c</fullName>
        <description>SFDC1-7199 D&amp;B Updated Date</description>
        <inlineHelpText>The last date the account was reviewed/updated by the Customer Master Data team.</inlineHelpText>
        <label>D&amp;B Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DandBCleanStatus__c</fullName>
        <label>S&amp;P_Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Different</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                </value>
                <value>
                    <fullName>Not Compared</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Select Match</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DandBDunsNumber__c</fullName>
        <label>D&amp;B_D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandBJigsaw__c</fullName>
        <label>D&amp;B_Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandBNAICSCode__c</fullName>
        <description>Maintained by the Customer Master Data team and populated through data.com</description>
        <label>D&amp;B_NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandBNAICSDescription__c</fullName>
        <description>Maintained by the Customer Master Data team and populated through data.com</description>
        <label>D&amp;B_ NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandBTradestyle__c</fullName>
        <description>Maintained by the Customer Master Data Team. This is the company&apos;s alternate trading name</description>
        <label>D&amp;B_Tradestyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DandBYearStarted__c</fullName>
        <description>Maintained by the Customer Master Data team and populated through the integration with Customer Master data</description>
        <label>D&amp;B_Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataGovernanceNotes__c</fullName>
        <description>SFDC1-768 &amp; SFDC1-786 Data Governance Notes is record sources for verifying company info when there is not a D&amp;B or EID record, editable only by Data Governance and System Admin.</description>
        <inlineHelpText>Record sources for verifying company information when there is not a D&amp;B nor an EID record.</inlineHelpText>
        <label>Customer Master Data Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataGovernanceStatus__c</fullName>
        <description>SFDC1-144 Signifies if the account has been validated by the Data Governance Team</description>
        <inlineHelpText>Maintained by the Customer Master Data Team.</inlineHelpText>
        <label>Customer Master Data Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                    <default>true</default>
                    <label>Unapproved</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <isActive>false</isActive>
                    <label>Under Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescriptionShort__c</fullName>
        <description>SFDC-2697: Short description.</description>
        <inlineHelpText>Short description.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomesticUltimateCompanyID__c</fullName>
        <description>SFDC1-7199 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Domestic Ultimate Company DUNS is provided by Customer Master</inlineHelpText>
        <label>Domestic Ultimate Company DUNS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomesticUltimateCompanyName__c</fullName>
        <description>SFDC1-7199 Populated via integration with GDSA. Only updated by GDSA Integration.</description>
        <inlineHelpText>Maintained by the Customer Master Data team and populated through the integration with Customer Master data</inlineHelpText>
        <label>Domestic Ultimate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrgType__c</fullName>
        <description>SFDC1-776 Replaces the Legacy Markit &quot;Account Type&quot; and will be augmented with values relevant to legacy IHS:
Buy Side
Sell Side
Vendor
Supplier
Corporate
Other.

Will be maintained by SF Ops team</description>
        <inlineHelpText>Field maintained by Sales Operations</inlineHelpText>
        <label>External Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                    <label>Academic/Education</label>
                </value>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture and Food</fullName>
                </value>
                <value>
                    <fullName>Automotive &amp; Transportation</fullName>
                </value>
                <value>
                    <fullName>Biotechnology &amp; Healthcare</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Buy-Side</fullName>
                    <label>Financial Buy-Side</label>
                </value>
                <value>
                    <fullName>Sell-Side</fullName>
                    <label>Financial Sell-Side</label>
                </value>
                <value>
                    <fullName>Government, NGOs and Non-profit</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining and Metals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Power and Utilities</fullName>
                </value>
                <value>
                    <fullName>Professional and Business Services</fullName>
                </value>
                <value>
                    <fullName>Retail/Consumer</fullName>
                </value>
                <value>
                    <fullName>Technology, Media &amp; Telecommunication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormerlyKnownAs__c</fullName>
        <description>SFDC1-9814 Account - New field for formerly known as
SFM-194: Added as part of Accounts DAT</description>
        <inlineHelpText>Please enter the name this company was formerly known as, if applicable.</inlineHelpText>
        <label>Formerly Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3378 Global Account Manager</description>
        <inlineHelpText>Global Account Manager</inlineHelpText>
        <label>GAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalAccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-149 There will be Accounts that are GAM&apos;s and will be identified by the name of the GAM in the GAM Field on the account, this field is a lookup to users. Managing the GAM is in separate stories under the epic of adding the field.
SFDC1-4204 : Updated Lookup filter to allow only Salesforce Users.</description>
        <inlineHelpText>Please enter a Global Account Manager for this account.</inlineHelpText>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>GAMAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateAccountID__c</fullName>
        <description>SFDC1-11046 Global Ultimate Company ID field populated via Data.com
SFDC-5081 replacing the DandbCompany reference : IF(ISBLANK(DandbCompanyId),&quot;&quot;,DandbCompany.Id)</description>
        <formula>&quot;&quot;</formula>
        <inlineHelpText>Global Ultimate Company ID field populated via Data.com</inlineHelpText>
        <label>Global Ultimate Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-144 Lookup to the existing account that is the Global Ultimate account. Only updated by Customer Master Integration.</description>
        <inlineHelpText>Only updated by CDI Integration.</inlineHelpText>
        <label>Global Ultimate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Ultimate Child Accounts</relationshipLabel>
        <relationshipName>GlobalUltimateChildAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateCompanyDUNS__c</fullName>
        <description>SFM-194: Added as part of Accounts DAT
SFDC-5081 replacing formula : DandbCompany.GlobalUltimateDunsNumber</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated via data.com</inlineHelpText>
        <label>Global Ultimate Company DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateCompanyName1__c</fullName>
        <description>SFM-194: Added as part of Accounts DAT
SFDC-5081 replacing the formula to decommision the field
DandbCompany.GlobalUltimateBusinessName</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated via data.com</inlineHelpText>
        <label>Global Ultimate Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldfireExpirationDate__c</fullName>
        <description>SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Goldfire Customer Care</inlineHelpText>
        <label>Goldfire Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IncorporatedIn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4360 This is a look up to the Country Object that allows Sales users to select the Country of Incorporation. Sales user is responsible for editing and maintaining this field.</description>
        <inlineHelpText>Please select the Country of Incorporation for this account.</inlineHelpText>
        <label>Incorporated In</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts (Incorporated In)</relationshipLabel>
        <relationshipName>AccountsIncorporatedIn</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>